--- a/main.html
+++ b/main.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Willkommen auf der Homepage von [Name des Entwicklers]</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Stilblatt für das Layout -->
+    <title>Welcome to the Homepage of [Developer's Name]</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Stylesheet for layout -->
 </head>
 <body>
     <header>
-        <h1>Willkommen auf der Homepage von [Name des Entwicklers]</h1>
+        <h1>Welcome to the Homepage of [Developer's Name]</h1>
         <nav>
             <ul>
-                <li><a href="#about">Über Mich</a></li>
-                <li><a href="#services">Dienstleistungen</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Kontakt</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <section id="hero">
         <div class="hero-content">
-            <h2>Professionelle Softwareentwicklung</h2>
+            <h2>Professional Software Development</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <a href="#contact" class="btn">Kontaktieren Sie mich</a>
+            <a href="#contact" class="btn">Contact Me</a>
         </div>
     </section>
     <section id="about">
         <div class="container">
-            <h2>Über Mich</h2>
-            <p>Hier kommt eine kurze Beschreibung über den Software-Entwickler und seine Erfahrungen.</p>
+            <h2>About Me</h2>
+            <p>Here comes a brief description about the software developer and their experiences.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
     </section>
     <section id="services">
         <div class="container">
-            <h2>Dienstleistungen</h2>
-            <p>Hier sind einige Dienstleistungen, die ich anbiete:</p>
+            <h2>Services</h2>
+            <p>Here are some services I offer:</p>
             <ul>
-                <li>Softwareentwicklung</li>
-                <li>Webdesign</li>
-                <li>Beratung für technische Projekte</li>
+                <li>Software Development</li>
+                <li>Web Design</li>
+                <li>Consultation for Technical Projects</li>
             </ul>
         </div>
     </section>
@@ -47,37 +47,37 @@
         <div class="container">
             <h2>Portfolio</h2>
             <div class="project">
-                <h3>Projekt 1</h3>
-                <p>Beschreibung des Projekts.</p>
-                <p>Verwendete Technologien: HTML, CSS, JavaScript.</p>
-                <a href="#" class="btn">Mehr erfahren</a>
+                <h3>Project 1</h3>
+                <p>Description of the project.</p>
+                <p>Technologies used: HTML, CSS, JavaScript.</p>
+                <a href="#" class="btn">Learn More</a>
             </div>
             <div class="project">
-                <h3>Projekt 2</h3>
-                <p>Beschreibung des Projekts.</p>
-                <p>Verwendete Technologien: Python, Django.</p>
-                <a href="#" class="btn">Mehr erfahren</a>
+                <h3>Project 2</h3>
+                <p>Description of the project.</p>
+                <p>Technologies used: Python, Django.</p>
+                <a href="#" class="btn">Learn More</a>
             </div>
         </div>
     </section>
     <section id="contact">
         <div class="container">
-            <h2>Kontakt</h2>
-            <p>Sie können mich über das folgende Formular kontaktieren:</p>
+            <h2>Contact</h2>
+            <p>You can contact me using the following form:</p>
             <form action="#" method="post">
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name" required><br>
-                <label for="email">E-Mail:</label><br>
+                <label for="email">Email:</label><br>
                 <input type="email" id="email" name="email" required><br>
-                <label for="message">Nachricht:</label><br>
+                <label for="message">Message:</label><br>
                 <textarea id="message" name="message" rows="4" required></textarea><br>
-                <button type="submit" class="btn">Nachricht senden</button>
+                <button type="submit" class="btn">Send Message</button>
             </form>
         </div>
     </section>
     <footer>
         <div class="container">
-            <p>&copy; 2024 [Name des Entwicklers]. Alle Rechte vorbehalten.</p>
+            <p>&copy; 2024 [Developer's Name]. All rights reserved.</p>
         </div>
     </footer>
 </body>
