its now ours lol
changed branding, Button-CSS,  Header, added Discord-Button to Footer

--- a/index.html
+++ b/index.html
@@ -8,38 +8,26 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Homepage of [Developer's Name]</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Welcome to LomiHub</h1>
+		<p style="text-align: center; font-size: 70%; margin-top: 0px;">(The website of LomiLab)</p>
     </header>
-    <section id="hero">
-        <div class="hero-content">
-            <h2>Professional Software Development</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <a href="#contact" class="btn">Contact Me</a>
-        </div>
-    </section>
+    
     <section id="about">
         <div class="container">
-            <h2>About Me</h2>
-            <p>Here comes a brief description about the software developer and their experiences.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
+            <h2>About Us</h2>
+            <p>We are a small group of developers who are passionate about turning ideas into reality. Specializing in developing a wide range of projects in various programming languages, we offer the expertise needed to bring your vision to fruition.</p>
+            <p>What sets us apart is our commitment to collaboration and communication. We believe in working closely with our clients throughout the development process, from initial concept to final delivery. This ensures that we not only meet but exceed expectations, delivering low-quality solutions that drive success.</p>
+			<p>Wanna join us? Join our Discord!</p>
+		</div>
     </section>
     <section id="services">
         <div class="container">
             <h2>Services</h2>
-            <p>Here are some services I offer:</p>
+            <p>Here are some services we offer:</p>
             <ul>
                 <li>Software Development</li>
                 <li>Web Design</li>
-                <li>Consultation for Technical Projects</li>
+                <li>Not helping you</li>
             </ul>
         </div>
     </section>
@@ -47,37 +35,30 @@
         <div class="container">
             <h2>Portfolio</h2>
             <div class="project">
-                <h3>Project 1</h3>
-                <p>Description of the project.</p>
-                <p>Technologies used: HTML, CSS, JavaScript.</p>
-                <a href="#" class="btn">Learn More</a>
+                <h3>Web-CLI Example</h3>
+                <p>this is a example for a funny command-line-interface in your browser</p>
+                <p>Technologies used: JavaScript, HTML, CSS.</p>
+                <a href="https://lominub44.github.io/web-CLI-example/" class="btn">Learn more</a>
             </div>
-            <div class="project">
-                <h3>Project 2</h3>
-                <p>Description of the project.</p>
-                <p>Technologies used: Python, Django.</p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
-        </div>
-    </section>
-    <section id="contact">
-        <div class="container">
-            <h2>Contact</h2>
-            <p>You can contact me using the following form:</p>
-            <form action="#" method="post">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" required><br>
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" required><br>
-                <label for="message">Message:</label><br>
-                <textarea id="message" name="message" rows="4" required></textarea><br>
-                <button type="submit" class="btn">Send Message</button>
-            </form>
+           <div class="project">
+				<h3>In work???</h3>
+				<p>We are working on it!</p>
+				<p>Technologies used: Python.</p>
+				<a href="#" class="btn" onclick="showAlert()">Learn More</a>
+				<script>
+					function showAlert() {
+						alert('This project is currently in development. Stay tuned for updates!');
+					}
+				</script>
+
+			</div>
+
         </div>
     </section>
     <footer>
         <div class="container">
-            <p>&copy; 2024 [Developer's Name]. All rights reserved.</p>
+            <p>&copy; 2024 LomiLab. All rights reserved.</p>
+			<a href="https://dsc.gg/lomilab/" class="btn">Join our Discord</a>
         </div>
     </footer>
 </body>
