CSS Update+HTML improvements

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Welcome to the Homepage of [Developer's Name]</title>
     <link rel="stylesheet" href="styles.css"> <!-- Stylesheet for layout -->
 </head>
+
 <body>
     <header>
-        <h1>Welcome to LomiHub</h1>
-		<p style="text-align: center; font-size: 70%; margin-top: 0px;">(The website of LomiLab)</p>
+        <h1 class="title">Welcome to LomiHub</h1>
+		<p class="sub-title">(The website of LomiLab)</p>
     </header>
     
     <section id="about">
