--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Stylesheet for layout -->
 </head>
 
-<!-- using https://github.com/bufferhead-code/nightowl?tab=readme-ov-file -->
+<!-- using https://github.com/bufferhead-code/nightowl -->
 <script
     type="module"
     src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
