--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
 			<a href="https://dsc.gg/lomilab/" class="btn">Join our Discord</a>
         </div>
     </footer>
+
+<!-- Default Statcounter code for LomiHub https://lominub44.github.io/LomiHub/
+-->
+<script type="text/javascript">
+var sc_project=12975207; 
+var sc_invisible=1; 
+var sc_security="998c22f2"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+Statcounter" href="https://statcounter.com/" target="_blank"><img
+class="statcounter" src="https://c.statcounter.com/12975207/0/998c22f2/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
 
