--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the Homepage of [Developer's Name]</title>
+    <title>LomiHub</title>
     <link rel="stylesheet" href="styles.css"> <!-- Stylesheet for layout -->
 </head>
 
